[package]
name = "cmdr"
version = "0.1.2"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@lely.com>"]
license = "MIT/Apache-2.0"
description = "Cmdr is a library for building line-oriented text-based user interfaces"
repository = "https://github.com/Mendelt/cmdr"
categories = ["command-line-interface"]
keywords = ["cmdr", "cli", "text", "command-line"]
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../README.md", "../LICENSE"]

[badges]
travis-ci = { repository = "Mendelt/cmdr" }

[dependencies]
cmdr_macro = { version = "0.1", path = "../cmdr_macro" }
