[package]
name = "cmdr"
version = "0.3.9"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Cmdr is a library for building line-oriented text-based user interfaces"
repository = "https://github.com/mendelt/cmdr"
categories = ["command-line-interface"]
keywords = ["cmdr", "cli", "text", "command-line"]
readme = "../README.md"
include = ["Cargo.toml", "src/**/*.rs", "../README.md", "../LICENSE"]

[badges]
travis-ci = { repository = "mendelt/cmdr" }

[dependencies]
cmdr_macro = { version="0.3.9", path="../cmdr_macro" }
rustyline = "4.0.0"
