[package]
name = "cmdr_macro"
version = "0.3.0"
edition = "2018"

authors = ["Mendelt Siebenga <mendelt@siebenga.com>"]
license = "MIT/Apache-2.0"
description = "Macros for use with cmdr crate"
repository = "https://github.com/Mendelt/cmdr"
categories = ["command-line-interface"]
keywords = ["cmdr", "cli", "text", "command-line"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE"]

[badges]
travis-ci = { repository = "Mendelt/cmdr" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.15", features = ["extra-traits", "full", "parsing"] }
quote = "0.6"
