[package]
name = "cmdr_macro"
version = "0.3.9"
edition = "2018"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros for use with cmdr crate"
repository = "https://github.com/mendelt/cmdr"
categories = ["command-line-interface"]
keywords = ["cmdr", "cli", "text", "command-line"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE"]

[badges]
travis-ci = { repository = "mendelt/cmdr" }

[lib]
path = "src/lib.rs"  # Needed for cargo readme
proc-macro = true

[dependencies]
proc-macro2 = "0.4.30"
syn = { version = "0.15.35", features = ["extra-traits", "full", "parsing"] }
quote = "0.6.12"
