[package]
name = "cmdr_macro"
version = "0.3.12"
edition = "2018"
rust-version = "1.46"

authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Macros for use with cmdr crate"
repository = "https://github.com/mendelt/cmdr"
categories = ["command-line-interface"]
keywords = ["cmdr", "cli", "text", "command-line"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "../LICENSE"]

[lib]
path = "src/lib.rs"  # Needed for cargo readme
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["extra-traits", "full", "parsing"] }
quote = "1"
itertools = "0.10"
